Version 1.2.3 [ 1.19.3 - 1.19.4 ]
* updated translations
* updated crate texture
* Item Crates are now Blocks

---

This version is only compatible with:

- 1.19.3
- 1.19.4